# osu-utils

./: .clang-format  .gitignore  Makefile.am  README.md  build.sh  configure.ac  scansrc  winfix.sh
.github/workflows/: build.yml  format.yml
inc/: log.h  log.hh
inc/util/: Basic.h  Downloader.h  Getbplist.h  Mode.h  OAuth.h
inc/utils/core/auth/: AuthorizationCodeGrant.hh  ClientCredential.hh  OAuth.h
inc/utils/core/network/: Basic.h  Download.hh  Downloader.h  Getbplist.h  Requests.h  Requests.hh  Socket.h  Socket.hh
inc/utils/core/op/: Bpanalyze.h  CalcManiaPP.h  Calcpp.h  CheckScore.h  CheckScore.hh  Generic.h  GetBPA.h  GetBPA.hh  GetBeatmapSets.h  GetBeatmapSets.hh  Mode.h  Query.h  Query.hh  Score.h  Token.hh
inc/utils/core/profile/: AccountProfile.h  AccountProfile.hh
inc/utils/core/score/: Analyze.hh  ParseScore.hh
inc/utils/core/uic/: CommandLine.h
inc/utils/core/util/: Generic.h
inc/utils/extra/calc/: Calc.h  CalcManiaPP.hh
inc/utils/extra/score/: Analyze.h  Score.h
inc/utils/uic/: CommandLine.h  CommandLine.hh  Protocol.h
inc/utils/util/: Commons.hh  Generic.h
src/: Main.cc  main.c
src/core/auth/: AuthorizationCodeGrant.cc  ClientCredential.cc  OAuth.c
src/core/network/: Basic.c  Download.cc  Downloader.c  Getbplist.c  Requests.c  Requests.cc  Socket.c  Socket.cc
src/core/op/: Bpanalyze.c  CalcManiaPP.c  Calcpp.c  CheckScore.c  CheckScore.cc  Generic.c  GetBPA.c  GetBPA.cc  GetBeatmapSets.c  GetBeatmapSets.cc  Mode.c  Query.c  Query.cc  Score.c  Token.cc
src/core/profile/: AccountProfile.c  AccountProfile.cc
src/core/score/: Analyze.cc  ParseScore.cc
src/core/uic/: CommandLine.c
src/core/util/: Generic.c
src/extra/calc/: Calc.c  CalcManiaPP.cc
src/extra/score/: Analyze.c  Score.c
src/uic/: CommandLine.c  CommandLine.cc  Protocol.c
src/util/: Commons.cc  Generic.c
